broken routes into authentication scopes, :construction: wip unstable
