# crates/backpack-server/src/routes/item.rs
@@ -14,16 +14,9 @@ use crate::{
 };
 
 pub(crate) fn item(kp: web::Data<KeyPair>) -> impl HttpServiceFactory {
-    let cors = Cors::default()
-        .allow_any_header()
-        .allow_any_origin()
-        .allow_any_method()
-        .send_wildcard()
-        .max_age(3600);
-    web::scope("api/v1")
+    web::scope("api/v1/admin")
         .app_data(kp)
         .wrap(HttpAuthentication::bearer(validator_admin))
-        .wrap(cors)
         .route("app/{app_id}/item", web::post().to(create_item))
         .route("item/{item_id}", web::get().to(get_item))
         .route("item/{item_id}", web::delete().to(delete_item))
